// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/ArrowButton default 1`] = `
.c1 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c1 > svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: block;
  line-height: 0;
}

.c0 svg {
  width: 24px;
  height: 24px;
}

<a
  className="c0"
  onClick={[Function]}
>
  <span
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "default": "test-file-stub",
        },
      }
    }
  />
</a>
`;

exports[`Storyshots Atoms/ArrowButton props isPrimary is true 1`] = `
.c1 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c1 > svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: block;
  line-height: 0;
}

.c0 svg {
  width: 24px;
  height: 24px;
}

.c0 svg path {
  fill: #007f48 !important;
}

<a
  className="c0"
  onClick={[Function]}
>
  <span
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "default": "test-file-stub",
        },
      }
    }
  />
</a>
`;

exports[`Storyshots Atoms/ArrowButton props isPrimary is true and isRight is true 1`] = `
.c1 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c1 > svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: block;
  line-height: 0;
  -webkit-transform: rotateY(180deg);
  -ms-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

.c0 svg {
  width: 24px;
  height: 24px;
}

.c0 svg path {
  fill: #007f48 !important;
}

<a
  className="c0"
  onClick={[Function]}
>
  <span
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "default": "test-file-stub",
        },
      }
    }
  />
</a>
`;

exports[`Storyshots Atoms/ArrowButton props isRight is true 1`] = `
.c1 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c1 > svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: block;
  line-height: 0;
  -webkit-transform: rotateY(180deg);
  -ms-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

.c0 svg {
  width: 24px;
  height: 24px;
}

<a
  className="c0"
  onClick={[Function]}
>
  <span
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "default": "test-file-stub",
        },
      }
    }
  />
</a>
`;

exports[`Storyshots Atoms/ArrowButton props onClick 1`] = `
.c1 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c1 > svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: block;
  line-height: 0;
}

.c0 svg {
  width: 24px;
  height: 24px;
}

<a
  className="c0"
  onClick={[Function]}
>
  <span
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "default": "test-file-stub",
        },
      }
    }
  />
</a>
`;
